# spellchecker

./: CMakeLists.txt  README SERIOUSLY  README.txt  a  dupa2  file  p  spellcheck.cbp  spellcheck.depend  spellcheck.layout  t
cbuild/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake
cbuild/dict-check/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dict-check
cbuild/dict-editor/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dict-editor
cbuild/dictionary/: CTestTestfile.cmake  Makefile  cmake_install.cmake  word_list_test
src/: CMakeLists.txt  Doxyfile.in  SortedVector.h  conf.h  dict-check.c  dictionary.c  dictionary.h  trie.c  trie.h  word_list.c  word_list.h  word_list_test  word_list_test.c
src/dict-check/: .dict-check.c.swp  CMakeLists.txt  dict-check.c
src/dict-editor/: CMakeLists.txt  dict-editor.c
src/dictionary/: CMakeLists.txt  array_set.c  array_set.h  array_set_simple.c  array_set_test.c  dictionary.c  dictionary.h  dictionary_test.c  error_handling.c  error_handling.h  map.h  mock_io.c  set.c  signCounter.c  signCounter.h  sortedVector.h  testen.c  trie.c  trie.h  trie_test.c  utils.h  vector.h  word_list.c  word_list.h  word_list_test.c
src/gtk-editor/: CMakeLists.txt  editor.c  extra.c  file.c  menu.c
src/sandbox/: CMakeLists.txt  scratchpad.c
